syntax = "proto3";

package kobun4.bank.deeds.v1;

option go_package = "v1pb";

message Info {
    string type = 1;
    string name = 2;
    bytes owner_account_handle = 3;
    int64 expiry_time_unix = 4;
}

message BuyRequest {
    bytes account_handle = 1;
    string type = 2;
    string name = 3;
    int64 periods = 4;
    bytes content = 5;
}

message BuyResponse {
}

message GetInfoRequest {
    string type = 2;
    string name = 3;
}

message GetInfoResponse {
    Info info = 1;
}

message GetContentRequest {
    string type = 2;
    string name = 3;
}

message GetContentResponse {
    bytes content = 1;
}

message UpdateRequest {
    string type = 1;
    string name = 2;
    bytes content = 3;
}

message UpdateResponse {
}

message DeleteRequest {
    string type = 1;
    string name = 2;
}

message DeleteResponse {
}

message ListRequest {
}

message ListResponse {
    repeated Info info = 1;
}

message RenewRequest {
    bytes account_handle = 1;
    string type = 2;
    string name = 3;
    int64 periods = 4;
}

message RenewResponse {
}

message TypeDefinition {
    string name = 1;
    int64 price = 2;
    int64 duration_seconds = 3;
}

message GetTypesRequest {
}

message GetTypesResponse {
    repeated TypeDefinition definition = 1;
}

message SetTypesRequest {
    repeated TypeDefinition definition = 1;
}

message SetTypesResponse {
}

service Deeds {
    rpc Buy(BuyRequest) returns (BuyResponse) { }
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) { }
    rpc GetContent(GetContentRequest) returns (GetContentResponse) { }
    rpc Update(UpdateRequest) returns (UpdateResponse) { }
    rpc List(ListRequest) returns (ListResponse) { }
    rpc Renew(RenewRequest) returns (RenewResponse) { }
    rpc Delete(DeleteRequest) returns (DeleteResponse) { }
    rpc GetTypes(GetTypesRequest) returns (GetTypesResponse) { }
    rpc SetTypes(SetTypesRequest) returns (SetTypesResponse) { }
}
